--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <meta name="keywords" content="App, Landing, Business, Onepage, Html, Business" />
 
     <!--====== TITLE TAG ======-->
-    <title>Educrown HTML5 Education Template</title>
+    <title>Халли масъалахои математики барои ихтисоси 40.01.01
+</title>
 
     <!--====== FAVICON ICON =======-->
     <link rel="shortcut icon" type="image/ico" href="assest/img/favicon.png" />
@@ -63,13 +64,20 @@
                         </div>
                         <div id="main-nav" class="stellarnav">
                             <ul id="nav" class="nav navbar-nav pull-right">
-                                <li class="active"><a href="#home">Home</a></li>
-                                <li><a href="#features">Features</a></li>
-                                <li><a href="#courses">Courses</a></li>
-                                <li><a href="#testmonial">Testmonial</a></li>
-                                <li><a href="#blog">Blog</a></li>
-                                <li><a href="#faqs">Faqs</a></li>
-                                <li><a href="#contact">Contact</a></li>
+                                <li class="active"><a href="#home">Асоси</a></li>
+                                <li><a href="#features">Маълумот</a></li>
+                                <li><a href="#courses">Модулхо</a>
+                                    <ul id="modules-nav">
+                                        <li><a href="">Модули 1</a></li>
+                                        <li><a href="">Модули 2</a></li>
+                                        <li><a href="">Модули 3</a></li>
+                                        <li><a href="">Модули 4</a></li>
+                                    </ul>
+                                </li>
+                                <li><a href="#testmonial">Тест</a></li>
+                                <li><a href="#blog">Тест</a></li>
+                                <li><a href="#faqs">Саволу Чавоб</a></li>
+                                <li><a href="#contact">Тамос</a></li>
                             </ul>
                         </div>
                     </div>
