--- a/index.html
+++ b/index.html
@@ -66,16 +66,15 @@
                             <ul id="nav" class="nav navbar-nav pull-right">
                                 <li class="active"><a href="#home">Асоси</a></li>
                                 <li><a href="#features">Маълумот</a></li>
-                                <li><a href="#courses">Модулхо</a>
+                                <li><a href="#courses">Маводхо</a>
                                     <ul id="modules-nav">
-                                        <li><a href="">Модули 1</a></li>
-                                        <li><a href="">Модули 2</a></li>
-                                        <li><a href="">Модули 3</a></li>
-                                        <li><a href="">Модули 4</a></li>
+                                        <li><a href="#about">Лексия</a></li>
+                                        <li><a href="">Аудио</a></li>
+                                        <li><a href="">Намунаи халли масъалахо</a></li>
+                                        <li><a href="">Видео</a></li>
+                                        <li><a href="">Презентасия</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="#testmonial">Тест</a></li>
-                                <li><a href="#blog">Тест</a></li>
                                 <li><a href="#faqs">Саволу Чавоб</a></li>
                                 <li><a href="#contact">Тамос</a></li>
                             </ul>
@@ -621,7 +620,7 @@
     </section>
     <!--ADDMISSION AREA END-->
 
-    <!--FOOER AREA-->
+    <!--FOOTER AREA-->
     <footer class="footer-area sky-gray-bg relative">
         <div class="footer-top-area padding-80-80 bg-dark">
             <div class="container">
@@ -671,16 +670,14 @@
                 <div class="row">
                     <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
                         <div class="footer-copyright text-center wow fadeIn">
-                            <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+                            <p>Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved </p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </footer>
-    <!--FOOER AREA END-->
+    <!--FOOTER AREA END-->
 
 
     <!--====== SCRIPTS JS ======-->
