барои лексияхо линки нав кушодам

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                                 <li><a href="#features">Маълумот</a></li>
                                 <li><a href="#courses">Маводхо</a>
                                     <ul id="modules-nav">
-                                        <li><a href="#about">Лексия</a></li>
+                                        <li><a href="lectures.html">Лексия</a></li>
                                         <li><a href="">Аудио</a></li>
                                         <li><a href="">Намунаи халли масъалахо</a></li>
                                         <li><a href="">Видео</a></li>
