Сахифахоя чудо чудо кардам

--- a/faq.html
+++ b/faq.html
@@ -15,8 +15,8 @@
     <meta name="keywords" content="App, Landing, Business, Onepage, Html, Business" />
 
     <!--====== TITLE TAG ======-->
-    <title>Лексияхо
-</title>
+    <title>Саволу Чавобхо
+    </title>
 
     <!--====== FAVICON ICON =======-->
     <link rel="shortcut icon" type="image/ico" href="assest/img/favicon.png" />
@@ -64,14 +64,14 @@
                                 <li><a href="#features">Маълумот</a></li>
                                 <li class="active"><a href="#courses">Маводхо</a>
                                     <ul id="modules-nav" class="nav">
-                                        <li class="active"><a href="#lectures">Лексия</a></li>
+                                        <li><a href="lectures.html">Лексия</a></li>
                                         <li><a href="">Аудио</a></li>
                                         <li><a href="">Намунаи халли масъалахо</a></li>
                                         <li><a href="">Видео</a></li>
                                         <li><a href="">Презентасия</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="faq.html">Саволу Чавоб</a></li>
+                                <li class="active"><a href="#faqs">Саволу Чавоб</a></li>
                                 <li><a href="contact.html">Тамос</a></li>
                             </ul>
                         </div>
@@ -83,116 +83,57 @@
     </header>
     <!--END TOP AREA-->
 
-    <!--BLOG AREA-->
-    <section class="blog-feed-area padding-top" id="lectures">
+    <!--FAQS AREA-->
+    <section class="faqs-area padding-100-50" id="faqs">
         <div class="container">
             <div class="row">
-                <div class="col-md-8 col-lg-8 col-md-offset-2 col-lg-offset-2 col-sm-12 col-xs-12">
+                <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
                     <div class="area-title text-center wow fadeIn">
-                        <h2>Лексияхо</h2>
+                        <h2>FAQS</h2>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-4 col-lg-4 col-sm-6 col-xs-12">
-                    <div class="single-blog-item sm-mb30 xs-mb30 wow fadeInUp" data-wow-delay="0.2s">
-                        <div class="blog-thumb">
-                            <a href="blog.html"><img src="assest/img/blog/blog-1.jpg" alt=""></a>                            
-                            <div class="video-promo-details">
-                                <div class="video-promo-content">
-                                    <span data-video-id="j1S66liv1t8" class="video-area-popup mb30"><i class="fa fa-play"></i></span>
-                                </div>
-                            </div>
-                        </div>
-                        
-                        
-                        <div class="blog-details padding30">
-                            <h3 class="blog-title font20 mb30"><a href="blog.html">Номи мавзуъ мешавад инчаба. Ду хат шавад хубтар</a></h3>
-                            <p class="blog-meta font14 mt20"><a href="#">Фев 01, 2018  </a> проф. <a href="#">Номи Профессор</a></p>
-                        </div>
+                    <div class="text-icon-box relative mb50 wow fadeInUp" data-wow-delay="0.1s">
+                        <h3 class="box-title">1.Two Very Different Australias?</h3>
+                        <p>A Google Docs scam that appears to be widespread began landing in users’ inboxes on Wednesday in what seemed to be a sophisticated phishing.</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-lg-4 col-sm-6 col-xs-12">
-                    <div class="single-blog-item sm-mb30 xs-mb30 wow fadeInUp" data-wow-delay="0.3s">
-                        <div class="blog-thumb">
-                            <a href="blog.html"><img src="assest/img/blog/blog-2.jpg" alt=""></a>
-                        </div>
-                        <div class="blog-details padding30">
-                            <h3 class="blog-title font20 mb30"><a href="blog.html">Лексияи аввал. Номи мавзуъ мешавад инчаба</a></h3>
-                            <p class="blog-meta font14 mt20"><a href="#">Фев 01, 2018  </a> проф. <a href="#">Номи Профессор</a></p>
-                        </div>
+                    <div class="text-icon-box relative mb50 wow fadeInUp" data-wow-delay="0.2s">
+                        <h3 class="box-title">2.What Does Darwin Mean to You?</h3>
+                        <p>A Google Docs scam that appears to be widespread began landing in users’ inboxes on Wednesday in what seemed to be a sophisticated phishing.</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-lg-4 col-sm-6 col-xs-12">
-                    <div class="single-blog-item sm-mb30 xs-mb30 wow fadeInUp" data-wow-delay="0.4s">
-                        <div class="blog-thumb">
-                            <a href="blog.html"><img src="assest/img/blog/blog-3.jpg" alt=""></a>
-                        </div>
-                        <div class="blog-details padding30">
-                            <h3 class="blog-title font20 mb30"><a href="blog.html">Лексияи дуввум. Номи мавзуъ мешавад инчаба</a></h3>
-                            <p class="blog-meta font14 mt20"><a href="#">Фев 01, 2018  </a> проф. <a href="#">Номи Профессор</a></p>
-                        </div>
+                    <div class="text-icon-box relative mb50 wow fadeInUp" data-wow-delay="0.3s">
+                        <h3 class="box-title">3.Where Totem Poles Are a Living Art ?</h3>
+                        <p>A Google Docs scam that appears to be widespread began landing in users’ inboxes on Wednesday in what seemed to be a sophisticated phishing.</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-lg-4 col-sm-6 col-xs-12">
-                    <div class="single-blog-item sm-mb30 xs-mb30 wow fadeInUp" data-wow-delay="0.2s">
-                        <div class="blog-thumb">
-                            <a href="blog.html"><img src="assest/img/blog/blog-1.jpg" alt=""></a>
-                        </div>
-                        <div class="blog-details padding30">
-                            <h3 class="blog-title font20 mb30"><a href="blog.html">Номи мавзуъ мешавад инчаба. Ду хат шавад хубтар</a></h3>
-                            <p class="blog-meta font14 mt20"><a href="#">Фев 01, 2018  </a> проф. <a href="#">Номи Профессор</a></p>
-                        </div>
+                    <div class="text-icon-box relative mb50 wow fadeInUp" data-wow-delay="0.1s">
+                        <h3 class="box-title">1.Two Very Different Australias?</h3>
+                        <p>A Google Docs scam that appears to be widespread began landing in users’ inboxes on Wednesday in what seemed to be a sophisticated phishing.</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-lg-4 col-sm-6 col-xs-12">
-                    <div class="single-blog-item sm-mb30 xs-mb30 wow fadeInUp" data-wow-delay="0.3s">
-                        <div class="blog-thumb">
-                            <a href="blog.html"><img src="assest/img/blog/blog-2.jpg" alt=""></a>
-                        </div>
-                        <div class="blog-details padding30">
-                            <h3 class="blog-title font20 mb30"><a href="blog.html">Лексияи аввал. Номи мавзуъ мешавад инчаба</a></h3>
-                            <p class="blog-meta font14 mt20"><a href="#">Фев 01, 2018  </a> проф. <a href="#">Номи Профессор</a></p>
-                        </div>
+                    <div class="text-icon-box relative mb50 wow fadeInUp" data-wow-delay="0.2s">
+                        <h3 class="box-title">2.What Does Darwin Mean to You?</h3>
+                        <p>A Google Docs scam that appears to be widespread began landing in users’ inboxes on Wednesday in what seemed to be a sophisticated phishing.</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-lg-4 col-sm-6 col-xs-12">
-                    <div class="single-blog-item sm-mb30 xs-mb30 wow fadeInUp" data-wow-delay="0.4s">
-                        <div class="blog-thumb">
-                            <a href="blog.html"><img src="assest/img/blog/blog-3.jpg" alt=""></a>
-                        </div>
-                        <div class="blog-details padding30">
-                            <h3 class="blog-title font20 mb30"><a href="blog.html">Лексияи дуввум. Номи мавзуъ мешавад инчаба</a></h3>
-                            <p class="blog-meta font14 mt20"><a href="#">Фев 01, 2018  </a> проф. <a href="#">Номи Профессор</a></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 col-lg-4 col-sm-6 col-xs-12">
-                    <div class="single-blog-item sm-mb30 xs-mb30 wow fadeInUp" data-wow-delay="0.2s">
-                        <div class="blog-thumb">
-                            <a href="blog.html"><img src="assest/img/blog/blog-1.jpg" alt=""></a>
-                        </div>
-                        <div class="blog-details padding30">
-                            <h3 class="blog-title font20 mb30"><a href="blog.html">Номи мавзуъ мешавад инчаба. Ду хат шавад хубтар</a></h3>
-                            <p class="blog-meta font14 mt20"><a href="#">Фев 01, 2018  </a> проф. <a href="#">Номи Профессор</a></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 col-lg-4 col-sm-6 col-xs-12">
-                    <div class="single-blog-item sm-mb30 xs-mb30 wow fadeInUp" data-wow-delay="0.2s">
-                        <div class="blog-thumb">
-                            <a href="blog.html"><img src="assest/img/blog/blog-1.jpg" alt=""></a>
-                        </div>
-                        <div class="blog-details padding30">
-                            <h3 class="blog-title font20 mb30"><a href="blog.html">Номи мавзуъ мешавад инчаба. Ду хат шавад хубтар</a></h3>
-                            <p class="blog-meta font14 mt20"><a href="#">Фев 01, 2018  </a> проф. <a href="#">Номи Профессор</a></p>
-                        </div>
+                    <div class="text-icon-box relative mb50 wow fadeInUp" data-wow-delay="0.3s">
+                        <h3 class="box-title">3.Where Totem Poles Are a Living Art ?</h3>
+                        <p>A Google Docs scam that appears to be widespread began landing in users’ inboxes on Wednesday in what seemed to be a sophisticated phishing.</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <!--BLOG AREA END-->
+    <!--FAQS AREA END-->
 
 
     <!--FOOTER AREA-->
