--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
                                         <li><a href="">Презентасия</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="#faqs">Саволу Чавоб</a></li>
-                                <li><a href="#contact">Тамос</a></li>
+                                <li><a href="faq.html">Саволу Чавоб</a></li>
+                                <li><a href="contact.html">Тамос</a></li>
                             </ul>
                         </div>
                     </div>
@@ -383,179 +383,6 @@
         </div>
     </section>
     <!--TESTMONIAL AREA AREA END-->
-
-    <!--BLOG AREA-->
-    <section class="blog-feed-area padding-top" id="blog">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-8 col-lg-8 col-md-offset-2 col-lg-offset-2 col-sm-12 col-xs-12">
-                    <div class="area-title text-center wow fadeIn">
-                        <h2>From Our Blog</h2>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-4 col-lg-4 col-sm-6 col-xs-12">
-                    <div class="single-blog-item sm-mb30 xs-mb30 wow fadeInUp" data-wow-delay="0.2s">
-                        <div class="blog-thumb">
-                            <a href="blog.html"><img src="assest/img/blog/blog-1.jpg" alt=""></a>
-                        </div>
-                        <div class="blog-details padding30">
-                            <h3 class="blog-title font20 mb30"><a href="blog.html">Blazeon Scrambles to Police Content Amid Rapid Growth</a></h3>
-                            <p class="blog-meta font14 mt20"><a href="#">Feb 01, 2016  </a> by <a href="#">Mark Stonis</a></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 col-lg-4 col-sm-6 col-xs-12">
-                    <div class="single-blog-item sm-mb30 xs-mb30 wow fadeInUp" data-wow-delay="0.3s">
-                        <div class="blog-thumb">
-                            <a href="blog.html"><img src="assest/img/blog/blog-2.jpg" alt=""></a>
-                        </div>
-                        <div class="blog-details padding30">
-                            <h3 class="blog-title font20 mb30"><a href="blog.html">Blazeon Scrambles to Police Content Amid Rapid Growth</a></h3>
-                            <p class="blog-meta font14 mt20"><a href="#">Feb 01, 2016  </a> by <a href="#">Mark Stonis</a></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 col-lg-4 col-sm-6 col-xs-12">
-                    <div class="single-blog-item sm-mb30 xs-mb30 wow fadeInUp" data-wow-delay="0.4s">
-                        <div class="blog-thumb">
-                            <a href="blog.html"><img src="assest/img/blog/blog-3.jpg" alt=""></a>
-                        </div>
-                        <div class="blog-details padding30">
-                            <h3 class="blog-title font20 mb30"><a href="blog.html">Blazeon Scrambles to Police Content Amid Rapid Growth</a></h3>
-                            <p class="blog-meta font14 mt20"><a href="#">Feb 01, 2016  </a> by <a href="#">Mark Stonis</a></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 col-lg-4 col-sm-6 col-xs-12">
-                    <div class="single-blog-item wow fadeInUp visible-sm" data-wow-delay="0.4s">
-                        <div class="blog-thumb">
-                            <a href="blog.html"><img src="assest/img/blog/blog-1.jpg" alt=""></a>
-                        </div>
-                        <div class="blog-details padding30">
-                            <h3 class="blog-title font20 mb30"><a href="blog.html">Blazeon Scrambles to Police Content Amid Rapid Growth</a></h3>
-                            <p class="blog-meta font14 mt20"><a href="#">Feb 01, 2016  </a> by <a href="#">Mark Stonis</a></p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!--BLOG AREA END-->
-
-
-    <!--FAQS AREA-->
-    <section class="faqs-area padding-100-50" id="faqs">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
-                    <div class="area-title text-center wow fadeIn">
-                        <h2>FAQS</h2>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-4 col-lg-4 col-sm-6 col-xs-12">
-                    <div class="text-icon-box relative mb50 wow fadeInUp" data-wow-delay="0.1s">
-                        <h3 class="box-title">1.Two Very Different Australias?</h3>
-                        <p>A Google Docs scam that appears to be widespread began landing in users’ inboxes on Wednesday in what seemed to be a sophisticated phishing.</p>
-                    </div>
-                </div>
-                <div class="col-md-4 col-lg-4 col-sm-6 col-xs-12">
-                    <div class="text-icon-box relative mb50 wow fadeInUp" data-wow-delay="0.2s">
-                        <h3 class="box-title">2.What Does Darwin Mean to You?</h3>
-                        <p>A Google Docs scam that appears to be widespread began landing in users’ inboxes on Wednesday in what seemed to be a sophisticated phishing.</p>
-                    </div>
-                </div>
-                <div class="col-md-4 col-lg-4 col-sm-6 col-xs-12">
-                    <div class="text-icon-box relative mb50 wow fadeInUp" data-wow-delay="0.3s">
-                        <h3 class="box-title">3.Where Totem Poles Are a Living Art ?</h3>
-                        <p>A Google Docs scam that appears to be widespread began landing in users’ inboxes on Wednesday in what seemed to be a sophisticated phishing.</p>
-                    </div>
-                </div>
-                <div class="col-md-4 col-lg-4 col-sm-6 col-xs-12">
-                    <div class="text-icon-box relative mb50 wow fadeInUp" data-wow-delay="0.1s">
-                        <h3 class="box-title">1.Two Very Different Australias?</h3>
-                        <p>A Google Docs scam that appears to be widespread began landing in users’ inboxes on Wednesday in what seemed to be a sophisticated phishing.</p>
-                    </div>
-                </div>
-                <div class="col-md-4 col-lg-4 col-sm-6 col-xs-12">
-                    <div class="text-icon-box relative mb50 wow fadeInUp" data-wow-delay="0.2s">
-                        <h3 class="box-title">2.What Does Darwin Mean to You?</h3>
-                        <p>A Google Docs scam that appears to be widespread began landing in users’ inboxes on Wednesday in what seemed to be a sophisticated phishing.</p>
-                    </div>
-                </div>
-                <div class="col-md-4 col-lg-4 col-sm-6 col-xs-12">
-                    <div class="text-icon-box relative mb50 wow fadeInUp" data-wow-delay="0.3s">
-                        <h3 class="box-title">3.Where Totem Poles Are a Living Art ?</h3>
-                        <p>A Google Docs scam that appears to be widespread began landing in users’ inboxes on Wednesday in what seemed to be a sophisticated phishing.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!--FAQS AREA END-->
-
-    <!--CONTACT US AREA-->
-    <section class="contact-area sky-gray-bg" id="contact">
-        <div class="container-fluid no-padding">
-            <div class="row no-margin">
-                <div class="no-padding col-md-6 col-lg-6 col-sm-12 col-xs-12">
-                    <div class="map-area relative">
-                        <div id="map" style="width: 100%; height: 600px;"> </div>
-                    </div>
-                </div>
-                <div class="no-padding col-md-4 col-lg-4 col-sm-12 col-xs-12">
-                    <div class="contact-form-content padding50 xs-padding20">
-                        <div class="contact-title wow fadeIn">
-                            <h3 class="font28 mb50 xs-mb30 xs-font22 xs-mt20">Any question in mind? Don’t Worry Contact Us.</h3>
-                        </div>
-                        <div class="contact-form wow fadeIn">
-                            <form action="process.php" id="contact-form" method="post">
-                                <div class="row">
-                                    <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
-                                        <div class="form-group" id="name-field">
-                                            <div class="form-input">
-                                                <input type="text" class="form-control" id="form-name" name="form-name" placeholder="Name.." required>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
-                                        <div class="form-group" id="email-field">
-                                            <div class="form-input">
-                                                <input type="email" class="form-control" id="form-email" name="form-email" placeholder="Email.." required>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
-                                        <div class="form-group" id="phone-field">
-                                            <div class="form-input">
-                                                <input type="text" class="form-control" id="form-phone" name="form-phone" placeholder="Subject..">
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
-                                        <div class="form-group" id="message-field">
-                                            <div class="form-input">
-                                                <textarea class="form-control" rows="6" id="form-message" name="form-message" placeholder="Your Message Here..." required></textarea>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
-                                        <div class="form-group mb0">
-                                            <button type="submit">Send Message</button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!--CONTACT US AREA END-->
 
     <!--CLIENT AREA-->
     <div class="client-area  padding-bottom mt100 sm-mt10 xs-mt0">
