--- a/contact.html
+++ b/contact.html
@@ -84,57 +84,66 @@
     <!--END TOP AREA-->
 
     <!--CONTACT US AREA-->
-    <section class="contact-area sky-gray-bg" id="contact">
-        <div class="container-fluid no-padding">
-            <div class="row no-margin">
-                <div class="no-padding col-md-6 col-lg-6 col-sm-12 col-xs-12">
-                    <div class="map-area relative">
-                        <div id="map" style="width: 100%; height: 600px;"> </div>
+    <section class="contact-area sky-gray-bg padding-100-50" id="contact">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
+                    <div class="area-title text-center wow fadeIn">
+                        <h2>Тамос</h2>
                     </div>
                 </div>
-                <div class="no-padding col-md-4 col-lg-4 col-sm-12 col-xs-12">
-                    <div class="contact-form-content padding50 xs-padding20">
-                        <div class="contact-title wow fadeIn">
-                            <h3 class="font28 mb50 xs-mb30 xs-font22 xs-mt20">Any question in mind? Don’t Worry Contact Us.</h3>
-                        </div>
-                        <div class="contact-form wow fadeIn">
-                            <form action="process.php" id="contact-form" method="post">
-                                <div class="row">
-                                    <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
-                                        <div class="form-group" id="name-field">
-                                            <div class="form-input">
-                                                <input type="text" class="form-control" id="form-name" name="form-name" placeholder="Name.." required>
+            </div>
+        </div>
+        <div class="row">
+            <div class="container-fluid no-padding">
+                <div class="row no-margin">
+                    <div class="no-padding col-md-6 col-lg-6 col-sm-12 col-xs-12">
+                        
+                    </div>
+                    <div class="no-padding col-md-4 col-lg-4 col-sm-12 col-xs-12">
+                        <div class="contact-form-content padding50 xs-padding20">
+                            <div class="contact-title wow fadeIn">
+                                <h3 class="font28 mb50 xs-mb30 xs-font22 xs-mt20">Бо мо бо алока бароед. </h3>
+                            </div>
+                            <div class="contact-form wow fadeIn">
+                                <form action="process.php" id="contact-form" method="post">
+                                    <div class="row">
+                                        <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
+                                            <div class="form-group" id="name-field">
+                                                <div class="form-input">
+                                                    <input type="text" class="form-control" id="form-name" name="form-name" placeholder="Ному насаб" required>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
+                                            <div class="form-group" id="email-field">
+                                                <div class="form-input">
+                                                    <input type="email" class="form-control" id="form-email" name="form-email" placeholder="Email" required>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
+                                            <div class="form-group" id="phone-field">
+                                                <div class="form-input">
+                                                    <input type="text" class="form-control" id="form-phone" name="form-phone" placeholder="Мавзуъ">
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
+                                            <div class="form-group" id="message-field">
+                                                <div class="form-input">
+                                                    <textarea class="form-control" rows="6" id="form-message" name="form-message" placeholder="Матн" required></textarea>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
+                                            <div class="form-group mb0">
+                                                <button type="submit">Равона</button>
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
-                                        <div class="form-group" id="email-field">
-                                            <div class="form-input">
-                                                <input type="email" class="form-control" id="form-email" name="form-email" placeholder="Email.." required>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
-                                        <div class="form-group" id="phone-field">
-                                            <div class="form-input">
-                                                <input type="text" class="form-control" id="form-phone" name="form-phone" placeholder="Subject..">
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
-                                        <div class="form-group" id="message-field">
-                                            <div class="form-input">
-                                                <textarea class="form-control" rows="6" id="form-message" name="form-message" placeholder="Your Message Here..." required></textarea>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
-                                        <div class="form-group mb0">
-                                            <button type="submit">Send Message</button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </form>
+                                </form>
+                            </div>
                         </div>
                     </div>
                 </div>
