--- a/module.html
+++ b/module.html
@@ -112,8 +112,11 @@
                         <p>Мувофиқат функсионалӣ, ё ки функсия номида мешавад, агар  графики он  ҷуфтҳое, ки координатаи якумашон якхела буда,  координатаи дуюмашон гуногун бошад, надошта бошад. Мувофиқат функсионалӣ, ё ки функсия номида мешавад, агар  графики он  ҷуфтҳое, ки координатаи якумашон якхела буда,  координатаи дуюмашон гуногун бошад, надошта бошад. </p>
                         <p>Мувофиқат функсионалӣ, ё ки функсия номида мешавад, агар  графики он  ҷуфтҳое, ки координатаи якумашон якхела буда,  координатаи дуюмашон гуногун бошад, надошта бошад. Мувофиқат функсионалӣ, ё ки функсия номида мешавад, агар  графики он  ҷуфтҳое, ки координатаи якумашон якхела буда,  координатаи дуюмашон гуногун бошад, надошта бошад. </p>
                     </div>
-                    <div id="module-audio"></div>
-                    <button onclick="play()">Play</button>
+                    <div>
+                        <h1 id="waveform__counter"></h1>
+                        <div id="module-audio"></div>
+                        <h1 id="waveform__duration"></h1>
+                    </div>
                     <div class="video-promo-details wow fadeIn">
                         <div class="video-promo-content">
                             <span data-video-id="j1S66liv1t8" class="video-area-popup mb30"><i class="fa fa-play"></i></span>
@@ -205,9 +208,10 @@
     <script src="assets/js/contact-form.js"></script>
     <script src="assets/js/jquery.ajaxchimp.js"></script>
     <script src="assets/js/jquery.sticky.js"></script>
-    <script src="https://unpkg.com/wavesurfer.js"></script>
+    <script src="assets/js/wavesurfer.js"></script>
     <!--===== ACTIVE JS=====-->
     <script src="assets/js/module.js"></script>
+    <script src="assets/js/functions.js"></script>
 
     <!--===== MAPS JS=====-->
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBTS_KEDfHXYBslFTI_qPJIybDP3eceE-A&sensor=false"></script>
