Камтар хубтар шд

--- a/module.html
+++ b/module.html
@@ -101,7 +101,7 @@
             <div class="row flex-v-center">
                 <div class="col-md-8 col-lg-8 col-md-offset-2 col-lg-offset-2 col-sm-12 col-xs-12">
                     <div class="about-content xs-mb50 wow fadeIn">
-                        <h3 class="text-center xs-font20 mb30">Модули 12.3</h3>
+                        <h2 class="module-name text-center xs-font20 mb30">Модули 12.3</h2>
                         <h3 class="text-center xs-font20 mb30">Математикаи дискретӣ</h3>
                         <p>Мувофиқат функсионалӣ, ё ки функсия номида мешавад, агар  графики он  ҷуфтҳое, ки координатаи якумашон якхела буда,  координатаи дуюмашон гуногун бошад, надошта бошад. Мувофиқат функсионалӣ, ё ки функсия номида мешавад, агар  графики он  ҷуфтҳое, ки координатаи якумашон якхела буда,  координатаи дуюмашон гуногун бошад, надошта бошад. </p>
                         <p>Мувофиқат функсионалӣ, ё ки функсия номида мешавад, агар  графики он  ҷуфтҳое, ки координатаи якумашон якхела буда,  координатаи дуюмашон гуногун бошад, надошта бошад. Мувофиқат функсионалӣ, ё ки функсия номида мешавад, агар  графики он  ҷуфтҳое, ки координатаи якумашон якхела буда,  координатаи дуюмашон гуногун бошад, надошта бошад. </p>
@@ -112,11 +112,18 @@
                         <p>Мувофиқат функсионалӣ, ё ки функсия номида мешавад, агар  графики он  ҷуфтҳое, ки координатаи якумашон якхела буда,  координатаи дуюмашон гуногун бошад, надошта бошад. Мувофиқат функсионалӣ, ё ки функсия номида мешавад, агар  графики он  ҷуфтҳое, ки координатаи якумашон якхела буда,  координатаи дуюмашон гуногун бошад, надошта бошад. </p>
                         <p>Мувофиқат функсионалӣ, ё ки функсия номида мешавад, агар  графики он  ҷуфтҳое, ки координатаи якумашон якхела буда,  координатаи дуюмашон гуногун бошад, надошта бошад. Мувофиқат функсионалӣ, ё ки функсия номида мешавад, агар  графики он  ҷуфтҳое, ки координатаи якумашон якхела буда,  координатаи дуюмашон гуногун бошад, надошта бошад. </p>
                     </div>
+                    <h4 class="text-center xs-font20 mb30">Маводхои ерирасон</h4>
+                    <h5 class="xs-font20 mb30">Пресентасияи лексия</h5>
                     <div>
-                        <h1 id="waveform__counter"></h1>
-                        <div id="module-audio"></div>
-                        <h1 id="waveform__duration"></h1>
+                        <iframe src="https://onedrive.live.com/embed?cid=A17C0ABDF318AEF5&amp;resid=A17C0ABDF318AEF5%21106&amp;authkey=ADQBLfEFvW3acEU&amp;em=2&amp;wdAr=1.3333333333333333" width="722px" height="565px" frameborder="0">This is an embedded <a target="_blank" href="https://office.com">Microsoft Office</a> presentation, powered by <a target="_blank" href="https://office.com/webapps">Office Online</a>.</iframe>
                     </div>
+                    <h5 class="xs-font20 mb30">Аудио лексия</h5>
+                    <div class="module-audio">
+                        <p class="audio-time" id="waveform__counter">2:00</p>
+                        <div id="waveform"></div>
+                        <p class="audio-time" id="waveform__duration">12:00</p>
+                    </div>
+                    <h5 class="xs-font20 mb30">Видео лексия</h5>
                     <div class="video-promo-details wow fadeIn">
                         <div class="video-promo-content">
                             <span data-video-id="j1S66liv1t8" class="video-area-popup mb30"><i class="fa fa-play"></i></span>
@@ -139,36 +146,25 @@
                             <div class="footer-logo mb30">
                                 <a href="#"><img src="assets/img/logo.png" alt=""></a>
                             </div>
-                            <p>Saudi Arabia has been accused of using anti-terror laws to suppress free expression and failing to carry out independent inquiries into its Yemen.</p>
+                            <p>Бехтарин ва аввалин портали математикии барои.. ягон техт куш каран даркор</p>
                         </div>
                     </div>
                     <div class="col-md-2 col-lg-2 col-sm-4 col-xs-12">
                         <div class="single-footer footer-list white xs-center xs-mb50">
                             <ul>
-                                <li><a href="#">About</a></li>
-                                <li><a href="#">Service</a></li>
-                                <li><a href="#">Team</a></li>
-                                <li><a href="#">Privicy Policy</a></li>
-                                <li><a href="#">Testmonial</a></li>
-                                <li><a href="#">Support</a></li>
+                                <li><a href="#">Асоси</a></li>
+                                <li><a href="#">Мафхум</a></li>
+                                <li><a href="#">Модулхо</a></li>
+                                <li><a href="#">Саволу Чавоб</a></li>
+                                <li><a href="#">Тамос</a></li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-md-5 col-lg-5 col-sm-8 col-xs-12">
                         <div class="single-footer footer-subscribe white xs-center">
-                            <h3 class="mb30 xs-font18">Subscribe Our Newsletter</h3>
-                            <p>Doubtful for answered one fat indulged margaret sir shutters together. Ladies so in wholly .</p>
-                            <div class="subscriber-form-area mt50 wow fadeIn">
-                                <!--<form action="#" class="subscriber-form mb100">
-                                    <input type="email" name="email" id="email" placeholder="Email Address">
-                                    <button type="submit">Subscribe</button>
-                                </form>-->
-                                <form id="mc-form" class="subscriber-form">
-                                    <label class="mt10" for="mc-email"></label>
-                                    <input type="email" id="mc-email" placeholder="email@example.com">
-                                    <button type="submit" class="plus-btn"><i class="fa fa-paper-plane-o"></i></button>
-                                </form>
-                            </div>
+                            <h3 class="mb30 xs-font18">Мо дар алокахои сотсиали</h3>
+                            <p>Моро дар шабакахои ичтимои дастефт кунед. </p>
+                            <p>Инчаба icon-хои фейсбуку дигира дигар мешавад.</p>
                         </div>
                     </div>
                 </div>
@@ -179,7 +175,7 @@
                 <div class="row">
                     <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
                         <div class="footer-copyright text-center wow fadeIn">
-                            <p>Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved </p>
+                            <p>&copy;<script>document.write(new Date().getFullYear());</script> Ҳамаи ҳуқуқҳо ҳифз карда шудааст.</p>
                         </div>
                     </div>
                 </div>
