--- a/faq.html
+++ b/faq.html
@@ -146,36 +146,25 @@
                             <div class="footer-logo mb30">
                                 <a href="#"><img src="assets/img/logo.png" alt=""></a>
                             </div>
-                            <p>Saudi Arabia has been accused of using anti-terror laws to suppress free expression and failing to carry out independent inquiries into its Yemen.</p>
+                            <p>Бехтарин ва аввалин портали математикии барои.. ягон техт куш каран даркор</p>
                         </div>
                     </div>
                     <div class="col-md-2 col-lg-2 col-sm-4 col-xs-12">
                         <div class="single-footer footer-list white xs-center xs-mb50">
                             <ul>
-                                <li><a href="#">About</a></li>
-                                <li><a href="#">Service</a></li>
-                                <li><a href="#">Team</a></li>
-                                <li><a href="#">Privicy Policy</a></li>
-                                <li><a href="#">Testmonial</a></li>
-                                <li><a href="#">Support</a></li>
+                                <li><a href="#">Асоси</a></li>
+                                <li><a href="#">Мафхум</a></li>
+                                <li><a href="#">Модулхо</a></li>
+                                <li><a href="#">Саволу Чавоб</a></li>
+                                <li><a href="#">Тамос</a></li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-md-5 col-lg-5 col-sm-8 col-xs-12">
                         <div class="single-footer footer-subscribe white xs-center">
-                            <h3 class="mb30 xs-font18">Subscribe Our Newsletter</h3>
-                            <p>Doubtful for answered one fat indulged margaret sir shutters together. Ladies so in wholly .</p>
-                            <div class="subscriber-form-area mt50 wow fadeIn">
-                                <!--<form action="#" class="subscriber-form mb100">
-                                    <input type="email" name="email" id="email" placeholder="Email Address">
-                                    <button type="submit">Subscribe</button>
-                                </form>-->
-                                <form id="mc-form" class="subscriber-form">
-                                    <label class="mt10" for="mc-email"></label>
-                                    <input type="email" id="mc-email" placeholder="email@example.com">
-                                    <button type="submit" class="plus-btn"><i class="fa fa-paper-plane-o"></i></button>
-                                </form>
-                            </div>
+                            <h3 class="mb30 xs-font18">Мо дар алокахои сотсиали</h3>
+                            <p>Моро дар шабакахои ичтимои дастефт кунед. </p>
+                            <p>Инчаба icon-хои фейсбуку дигира дигар мешавад.</p>
                         </div>
                     </div>
                 </div>
@@ -186,7 +175,7 @@
                 <div class="row">
                     <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
                         <div class="footer-copyright text-center wow fadeIn">
-                            <p>Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved </p>
+                            <p>&copy;<script>document.write(new Date().getFullYear());</script> Ҳамаи ҳуқуқҳо ҳифз карда шудааст.</p>
                         </div>
                     </div>
                 </div>
