--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <a href="#scroolup" class="scrolltotop"><i class="fa fa-long-arrow-up"></i></a>
 
     <!--START TOP AREA-->
-    <header class="top-area" id="home" style="width: ;">
+    <header class="top-area" id="home">
         <div class="header-top-area" id="scroolup">
             <!--MAINMENU AREA-->
             <div class="mainmenu-area" id="mainmenu-area">
