--- a/modules.html
+++ b/modules.html
@@ -48,7 +48,7 @@
     <a href="#scroolup" class="scrolltotop"><i class="fa fa-long-arrow-up"></i></a>
 
     <!--START TOP AREA-->
-    <header class="top-area" id="home" style="height: 101px; background: #292929">
+    <header class="top-area" id="home">
         <div class="header-top-area" id="scroolup">
             <!--MAINMENU AREA-->
             <div class="mainmenu-area" id="mainmenu-area">
